--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -17,4 +17,5 @@ encoding//src/main/webapp/WEB-INF/views/backend/user-edit.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/backend/user-list.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/frontend/index.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/frontend/layout/footer.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/frontend/product-detail.jsp=UTF-8
 encoding/<project>=UTF-8
